update to fix overlay alignment

--- a/front-end/src/components/Overlay.css
+++ b/front-end/src/components/Overlay.css
@@ -14,6 +14,8 @@
     position: absolute;
     overflow-y: auto;
     top: 5%;
+    left: 0;
+    right: 0;
     max-height: 90%;
     z-index: 10;
     padding-left: 40px;
@@ -27,8 +29,6 @@
 .overlay__container {
     margin: auto;
     background-color: rgb(41, 41, 41);
-    top: 50%;
-    z-index: 11;
     color: white;
     max-width: 1000px;
     padding: 30px;
